# mcqnet

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  linux_socket_handoff.md  naming_convention.md  project_context.md  project_progress.md  xmake.lua
mcqnet/: CMakeLists.txt
mcqnet/benchmark/: CMakeLists.txt  benchmark_memory_resource.cpp  benchmark_small_object_alloc.cpp
mcqnet/include/mcqnet/: mcqnet.h
mcqnet/include/mcqnet/config/: assert.h  compiler.h  feature.h  platform.h
mcqnet/include/mcqnet/core/: cacheline.h  error.h  exception.h  utility.h
mcqnet/include/mcqnet/detail/: macro.h  operation_awaiter.h  operation_base.h  scheduler.h
mcqnet/include/mcqnet/memory/: fixed_block_pool.h  memory_resource.h  object_pool.h  thread_local_pool.h
mcqnet/include/mcqnet/net/: buffer.h  linux_socket_api.h  socket_address.h  socket_handle.h  socket_operations.h  socket_result.h  tcp_listener.h  tcp_stream.h
mcqnet/include/mcqnet/runtime/: cancel.h  completion_backend.h  handle.h  io_backend.h  io_operation.h  io_uring_backend.h  runtime.h
mcqnet/include/mcqnet/task/: join_handle.h  spawn.h  task.h
mcqnet/include/mcqnet/time/: sleep.h  timeout.h
mcqnet/test/: CMakeLists.txt  test_coroutine.cpp  test_cross_thread_alloc.cpp  test_io_uring_backend.cpp  test_net.cpp  test_runtime.cpp  test_runtime_headers.cpp  test_step1.cpp  test_step2.cpp  test_time.cpp
